tests/ui/pin_slab_take.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
 --> tests/ui/pin_slab_take.rs:8:18
  |
8 |     let _ = slab.take(key);
  |                  ^^^^ the trait `Unpin` is not implemented for `PhantomPinned`
  |
  = note: consider using the `pin!` macro
          consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required by a bound in `PinSlab::<T, Tag, MAX>::take`
 --> src/collections/pin_slab.rs
  |
  |     pub fn take(&mut self, key: SlabKey<Tag, MAX>) -> Option<T>
  |            ---- required by a bound in this associated function
  |     where
  |         T: Unpin,
  |            ^^^^^ required by this bound in `PinSlab::<T, Tag, MAX>::take`
